--- a/index.html
+++ b/index.html
@@ -1,1 +1,22 @@
 <!DOCTYPE html>
+<html>
+  <head>
+    <title>Curriculum Vitae</title>
+    <link rel="stylesheet" href="style.css">
+  </head>
+
+  <body>
+    <header>
+      <h1>Van Overmeire Frédéric</h1>
+      <p>(+32)486 078 773 <br />frederic.vanovermeire@gmail.com</p>
+    </header>
+    <div>
+      <h4>Experience</h4>
+      <ul>
+        <li>Jun.2019 - Jun.2021 : <b>La Gaufrerie</b><i class="desc"> Waffle shop</i><br />
+          <span class="tiny">Seller, inventory management</span>
+        </li>
+
+  </body>
+
+</html>
