--- a/index.html
+++ b/index.html
@@ -6,16 +6,42 @@
   </head>
 
   <body>
+
     <header>
       <h1>Van Overmeire Frédéric</h1>
       <p>(+32)486 078 773 <br />frederic.vanovermeire@gmail.com</p>
     </header>
-    <div>
-      <h4>Experience</h4>
-      <ul>
-        <li>Jun.2019 - Jun.2021 : <b>La Gaufrerie</b><i class="desc"> Waffle shop</i><br />
-          <span class="tiny">Seller, inventory management</span>
-        </li>
+
+    <main>
+      <section>
+        <h3>About</h3>
+          <p>My name is Frédéric Van Overmeire. I'm a hardworker and have plenty of experience in many field and culture.
+          </p>
+        <img src="me.jpg" alt="SelfPortrait" height="93px" width="80px">
+      </section>
+      <section>
+        <h2>Experience</h2>
+          <p>Jun. 2020 - Jun.2021</p>
+            <p><b>La Gaufrerie </b><i>Waffle and Icecream Shop</i><br />
+              <span>Liège, Belgium<br/>Duty: Seller, inventory management</span>
+          </p>
+          <p>Dec. 2017 - Aug. 2018</p>
+            <p><b>Ikanbi</b><i>Call Center</i><br/>
+              <span>Liège, Belgium<br/>Duty: Customer support for Proximus, mobile repair</span>
+            </p>
+          <p>Jan. 2016 - Dec. 2016</p>
+            <p><b>Triple V Orange CO.,LTD</b><i>Fruit and Herbal Juice Maker</i><br/>
+              <span>Bangkok, Thailand<br/>Duty: Marketing and customer support</span>
+          </p>
+          <p>Jan. 2015 - Dec. 2015</p>
+            <p><b>Le Tour de Thai</b><i>Restaurant & Take away shop</i><br/>
+              <span>Liège, Belgium<br/>Duty: </span>
+          </p>
+
+
+    </main>
+
+
 
   </body>
 
