--- a/index.html
+++ b/index.html
@@ -24,23 +24,24 @@
       </section>
       <section>
         <h2>Experience</h2>
+        <div class="gr">
           <p>Jun. 2020 - Jun.2021</p>
-            <p><b>La Gaufrerie </b><i>Waffle and Icecream Shop</i><br />
+            <p><span class="sp">La Gaufrerie </span><i>Waffle and Icecream Shop</i><br />
               <span>Liège, Belgium<br/>Duty: Seller, inventory management</span>
           </p>
           <p>Dec. 2017 - Aug. 2018</p>
-            <p><b>Ikanbi</b><i>Call Center</i><br/>
+            <p><span class="sp">Ikanbi</span><i>Call Center</i><br/>
               <span>Liège, Belgium<br/>Duty: Customer support for Proximus, mobile repair</span>
             </p>
           <p>Jan. 2016 - Dec. 2016</p>
-            <p><b>Triple V Orange CO.,LTD</b><i>Fruit and Herbal Juice Maker</i><br/>
+            <p><span class="sp">Triple V Orange CO.,LTD</span><i>Fruit and Herbal Juice Maker</i><br/>
               <span>Bangkok, Thailand<br/>Duty: Marketing and customer support</span>
           </p>
           <p>Jan. 2015 - Dec. 2015</p>
-            <p><b>Le Tour de Thai</b><i>Restaurant & Take away shop</i><br/>
+            <p><span class="sp">Le Tour de Thai</span><i>Restaurant & Take away shop</i><br/>
               <span>Liège, Belgium<br/>Duty: </span>
           </p>
-
+        </div>  
 
     </main>
 
